jwt-test-server/manifests/Deployment-jwt-test-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-test-server
  namespace: default
  labels:
    app: jwt-test-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jwt-test-server
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jwt-test-server
    spec:
      containers:
        - name: jwt-test-server
          image: jwt-test-server
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 9090
          readinessProbe:
            httpGet:
              path: /health
              port: 9090
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/jwt-test-server
      volumes:
        - name: config
          configMap:
            name: jwt-test-server-config
      restartPolicy: Always
