jwt-test-server/manifests/Service-jwt-test-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: jwt-test-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jwt-test-server
  ports:
    - name: http
      protocol: TCP
      port: 8080
